# melitta-barista-ha

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PROTOCOL.md  README.md  SECURITY.md  hacs.json  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
BLE_ARCHITECTURE/: index.html
BRAND_PROFILE_SPEC/: index.html
PROTOCOL/: index.html
SOMMELIER_API/: index.html
audit/: AUDIT_REPORT.md
changelog/: index.html
docs/: BLE_ARCHITECTURE.md  BRAND_PROFILE_SPEC.md  PROTOCOL.md  SOMMELIER_API.md  SOMMELIER_TZ_DRAFT.md  changelog.md  ha-forum-post.md  index.md
esp_emulator/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp_emulator/main/: CMakeLists.txt  main.c  nivona_ble.c  nivona_ble.h  nivona_brew.c  nivona_brew.h  nivona_cli.c  nivona_cli.h  nivona_consumables.c  nivona_consumables.h  nivona_crypto.c  nivona_crypto.h  nivona_dis.c  nivona_dis.h  nivona_dispatch.c  nivona_dispatch.h  nivona_families.c  nivona_families.h  nivona_frame.c  nivona_frame.h  nivona_fsm.c  nivona_fsm.h  nivona_gatt.c  nivona_gatt.h  nivona_maint.c  nivona_maint.h  nivona_maint_cycle.c  nivona_maint_cycle.h  nivona_ota.c  nivona_ota.h  nivona_stats.c  nivona_stats.h  nivona_store.c  nivona_store.h  nivona_telnet.c  nivona_telnet.h  nivona_wifi.c  nivona_wifi.h  wifi_secrets.h.template
esphome/: ble-proxy-xiao-c6.yaml  ble-proxy-xiao-s3.yaml  secrets.yaml.example
scripts/: ble_scanner.py  test_pair_connect.py  test_proxy_connect.py
(+143 files in other folders)
